--- a/src/App.css
+++ b/src/App.css
@@ -24,33 +24,9 @@ button:hover {
    }
 }
 
-.product-list {
-  h2.mb-20 {
-    margin-bottom: 25px;
-    margin-top: 20px;
-  }
-}
-.product-details {
-  .row {
-    margin-top: 20px;
-  }
-  button {
-    background-color: #f0f0f0;
-    border-radius: 16px;
-    border: 1px solid;
-    color:black ;
-  }
-  button:hover {
-  background-color: #c8d4d8;
-  cursor: pointer;
 
-  }
-}
-.custom-button{
-  width: 200px; 
-  text-align: center;
-  height: 50px;
-}
+
+
 
 .header-button {
   background-color: #000000;
@@ -63,12 +39,12 @@ button:hover {
   
 }
 .header-button :hover {
-  background-color: #c8d4d8;
+  background-color: #5a5e5f;
   color: black;
  }
 .header-button a {
   text-decoration: none;
-  color: inherit;
+  
 }
 
 .right-end {
@@ -77,6 +53,8 @@ button:hover {
 
 .custom-navbar {
   height: 75px;
- 
-
 }
+
+
+
+
